# nlp-stock-picker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/nlp_stock_picker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/stockpicker/: __init__.py
src/stockpicker/backtest/: engine.py  metrics.py
src/stockpicker/features/: technical.py
src/stockpicker/models/: scoring.py
src/stockpicker/nlp/: finbert.py  news_rss.py  sentiment_store.py
src/stockpicker/portfolio/: trades.py  weights.py
src/stockpicker/scripts/: build_sentiment.py  make_trades.py  run_backtest.py
tests/: test_smoke.py
